OO-7425: implementation assessment inspection (SEB, timed...)